[tool.poetry]
name = "crypto"
version = "0.1.0"
description = "voobshe pohuyu"
authors = ["Vladi and Evgeny"]
license = "HZ"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
aiohttp = "^3.7.3"
mongoengine = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
