[tool.poetry]
name = "crypto"
version = "0.1.0"
description = "voobshe pohuyu"
authors = ["Vladi and Evgeny"]
license = "HZ"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
aiohttp = "^3.7.3"
mongoengine = "^0.22.1"
uvicorn = "^0.13.3"
requests = "^2.25.1"
Jinja2 = "^2.11.2"
aiofiles = "^0.6.0"
config = "^0.5.0"
yfinance = "^0.1.55"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
